Comp. basic functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <input type="text" id="cityInput" placeholder="Enter city name" spellcheck="false">
       <button id="searchBtn"><i class='bx bx-search-alt-2'></i></button>
     </div>
+    <div class="error" id="error">Invalid City Name. Try Again!</div>
     <div class="weather-details">
       <div class="city-info">
           <img src="./assets/images/clear.png" alt="Weather Icon" id="weatherIcon">
